# zivid-python

./: .clang-format  .clang-tidy  .darglint  .flake8  .flake8-internal  .flake8-packaged-files  .flake8-tests  .gitattributes  .gitignore  .pylintrc  .pylintrc-internal  .pylintrc-packaged-files  .pylintrc-tests  CMakeLists.txt  CMakePresets.json  LICENSE  MANIFEST.in  README.md  Settings2D.yml  ZividTwo_Settings_Normal.yml  azure-pipelines.yml  conanfile.txt  dependencies.LICENSE  pyproject.toml  pytest.ini  sdk_version.json  setup.py
.github/: CODEOWNERS
.github/workflows/: main.yml
cmake/: CompilerWarningOptions.cmake  ReadZividVersion.cmake  TargetUtilities.cmake
continuous-integration/: TestMatrix.md  requirements-build-and-test.txt  requirements-lint.txt  versions.json
continuous-integration/azure-templates/: code-analysis.yml  linux.yml  windows.yml
continuous-integration/code-generation/: check_datamodels_up_to_date.py  datamodel_frontend_generator.py  docker_generate_datamodels.sh  generate_datamodels.sh
continuous-integration/deployment/: check_expected_artifacts.py  expected-artifacts.txt  expected-version.txt
continuous-integration/linux/: build-and-install-source-distribution.sh  build.sh  install-sdk.sh  (+13 more)
doc/: CompilerInstallation.md
licenses-dependencies/: README.md  eigen.txt  numpy.txt  pybind11.txt  python310.txt  python311.txt  python312.txt  python36.txt  python37.txt  python38.txt  python39.txt  zivid.txt
samples/: checkerboard_stitching.py  demo_settings.yml  sample_calibrate_eye_to_hand.py  sample_capture.py  sample_capture_2d.py  sample_capture_assistant.py  sample_capture_async.py  sample_capture_from_file.py  sample_capture_hdr.py  sample_captureassistant.py  sample_infield_correction.py  sample_infield_verification.py  sample_network_configuration.py  sample_presets.py  sample_print_version_info.py  sample_project_on_checkerboard.py  sample_read_barcodes.py  sample_update_firmware.py  sample_visualizer.py  tmp_test_unstructured.py
scripts/: get_samples.py  sample_data.py
src/: AmbientLightFrequency.cpp  CMakeLists.txt  Calibrate.cpp  CalibrationResidual.cpp  CameraRevision.cpp  CaptureAssistant.cpp  Checkerboard.cpp  DataModel.cpp  Detector.cpp  Environment.cpp  Firmware.cpp  HDR.cpp  HandEye.cpp  Matrix4x4.cpp  NodeType.cpp  PixelMapping.cpp  PointCloud.cpp  PointCloudExport.cpp  Pose.cpp  Presets.cpp  Projection.cpp  ReleasableArray1D.cpp  ReleasableArray2D.cpp  ReleasableCamera.cpp  ReleasableFrame.cpp  ReleasableFrame2D.cpp  ReleasableImage.cpp  ReleasablePointCloud.cpp  ReleasableProjectedImage.cpp  ReleasableUnorganizedPointCloud.cpp  ReleasableUnstructuredPointCloud.cpp  SingletonApplication.cpp  SuggestSettingsParameters.cpp  Version.cpp  Wrapper.cpp  Wrapper.h.in
src/Calibration/: Calibrate.cpp  Calibration.cpp  CalibrationResidual.cpp  Checkerboard.cpp  Detector.cpp  HandEye.cpp  MultiCamera.cpp  Pose.cpp
src/Core/: CMakeLists.txt  CaptureAssistant.cpp  DataModel.cpp  Matrix4x4.cpp  PixelMapping.cpp  PointCloudExport.cpp  Presets.cpp  Projection.cpp  ReleasableArray1D.cpp  ReleasableFrame.cpp  ReleasableImage.cpp  ReleasablePointCloud.cpp  ReleasableUnorganizedPointCloud.cpp  Wrapper.cpp
src/Core/Calibration/: Calibration.cpp  Detector.cpp  HandEye.cpp  MultiCamera.cpp
src/Core/InfieldCorrection/: InfieldCorrection.cpp
src/Core/Toolbox/: Barcode.cpp  PointCloudRegistration.cpp  Toolbox.cpp
src/Core/include/ZividPython/: DataModel.h  DataModelWrapper.h  Matrix.h  PixelMapping.h  PointCloudExport.h  Presets.h  Releasable.h  ReleasableArray1D.h  ReleasableCamera.h  ReleasableFrame.h  ReleasableFrame2D.h  ReleasableImage.h  ReleasablePointCloud.h  ReleasableUnorganizedPointCloud.h  Traits.h  Version.h  Wrappers.h
src/Core/include/ZividPython/Calibration/: Detector.h  MultiCamera.h  Pose.h
src/Core/include/ZividPython/InfieldCorrection/: InfieldCorrection.h
src/Core/include/ZividPython/Toolbox/: Barcode.h  PointCloudRegistration.h  Toolbox.h
src/InfieldCorrection/: InfieldCorrection.cpp
src/Toolbox/: PointCloudRegistration.cpp
src/Visualization/: CMakeLists.txt  Visualizer.cpp  Wrapper.cpp
src/Visualization/include/ZividPython/Visualization/: Visualizer.h
src/include/ZividPython/: AmbientLightFrequency.h  Calibrate.h  CalibrationResidual.h  CameraRevision.h  CaptureAssistant.h  Checkerboard.h  DataModel.h  DataModelWrapper.h  DepdendentFalse.h  DependentFalse.h  Detector.h  Environment.h  Firmware.h  HDR.h  HandEye.h  Matrix.h  Matrix4x4.h  NodeType.h  PointCloud.h  PointCloudExport.h  Pose.h  Presets.h  Projection.h  Releasable.h  ReleasableArray1D.h  ReleasableArray2D.h  ReleasableCamera.h  ReleasableFrame.h  ReleasableFrame2D.h  ReleasableImage.h  ReleasablePointCloud.h  ReleasableProjectedImage.h  ReleasableUnorganizedPointCloud.h  ReleasableUnstructuredPointCloud.h  SingletonApplication.h  SuggestSettingsParameters.h  Traits.h  Version.h  Wrappers.h
src/include/ZividPython/Calibration/: Calibrate.h  Calibration.h  CalibrationResidual.h  Checkerboard.h  Detector.h  HandEye.h
src/include/ZividPython/InfieldCorrection/: InfieldCorrection.h
src/include/ZividPython/Toolbox/: PointCloudRegistration.h
src/templates/: Wrapper.h.in
test/: assertions.py  conftest.py  test_application.py  test_application_init_release.py  test_camera.py  test_camera_capture.py  test_camera_info.py  test_camera_state.py  test_camera_user_data.py  test_capture_assistant.py  test_captureassistant.py  test_datamodel_copy.py  test_datamodel_save_load.py  test_datamodel_serialize_from_serialized.py  test_environment.py  test_filters.py  test_firmware.py  test_frame.py  test_frame_2d.py  test_frame_info.py  test_hand_eye.py  test_hdr_combine_frames.py  test_image.py  test_image_2d.py  test_image_2d_bgra.py  test_image_2d_rgba.py  test_image_2d_srgb.py  test_matrix4x4.py  test_network_configuration.py  test_point_cloud.py  test_presets.py  test_projection.py  test_region_of_interest.py  test_samples.py  test_settings.py  test_settings_2d.py  test_unorganized_point_cloud.py  test_versioning.py  test_zivid_module_content.py
(+207 files in other folders)
